=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

Breaking Changes
----------------

Changes
-------

Fixes
-----

 - Fixed empty ``account_user``-column in twitter tutorial plugin.

2017/08/23 1.5.1
================

Fixes
-----

 - Fixed issue that caused the Monitoring tab to redirect to ``/401`` when
   the user didn't have privileges for ``sys.cluster`` or ``sys.jobs_log``.

2017/08/23 1.5.0
================

Changes
-------

 - Added Privileges plugin for the Enterprise Edition.

 - The documentation link now points to the documentation for the major.minor
   (e.g. 2.1) version of CrateDB, instead of major.minor.hotfix (e.g. 2.1.1).

2017/07/21 1.4.2
================

Fixes
-----

 - Fix Tweet import for Twitter tutorial page

2017/07/11 1.4.1
================

Fixes
-----

 - Add ``DENY`` keyword to the console autocapitalization.

 - Display error message on the Tutorial plugin when the SQL query fails.

 - Fixed the SQL query in the Tutorial plugin.

 - Fix timestamp formatting in the console results.

2017/07/10 1.4.0
================

Changes
-------

 - Display user name in the status bar when the Enterprise
   Edition is enabled.

2017/07/07 1.3.3
================

Fixes
-----

 - Cluster warning within the monitoring plugin, regarding
   stat collection being disabled, has been improved.

2017/07/07 1.3.2
================

Fixes
-----

 - Redirect to /401 when the admin-ui user does not have cluster privileges.

 - Expanded the list of keywords used by autocapitalization.

 - Fix toggle buttons UI, which was broken while zooming.

 - Change color of keywords in the console to be more readable.

 - Display long table names correctly.

2017/04/24 1.3.1
================

Fixes
-----

 - Licence ident wording has been corrected.

2017/04/18 1.3.0
================

 - License ident is now displayed in the Enterprise Edition.

2017/04/12 1.2.3
================
