@@ -317,3 +317,10 @@ tr > .cr-table-cell {
   background-color:rgba(255, 255, 255, 0.1) !important;
 }
 
+#share-btn > img {
+  margin-bottom: 5px;
+}
+
+#share-btn {
+  max-width: 70px !important;
+}
