@@ -42,9 +42,12 @@
 
             <div class="cr-console-header__options">
               <div class="cr-console-header__options__item--hint">{{ 'CONSOLE.HINT' | translate }}</div>
-              <div id="execute-btn" class="cr-console-header__options__item--btn cr-button cr-button--console" ng-click="execute()" type="submit" >
+              <div id="execute-btn" class="cr-console-header__options__item--btn cr-button cr-button--console" ng-click="execute()">
                 <div ng-class="loading ? 'faded-text' : ''" translate>{{ 'CONSOLE.EXCUTE_QUERY' }}</div>
                 <div ng-if="loading" class="cr-loading-indicator"><i class="fa fa-spinner pulse fa-2x fa-fw cr-loading-indicator-icon"></i></div>
+              </div>
+              <div id="share-btn" class="cr-console-header__options__item--btn cr-button cr-button--console" ng-click="share()" data-original-title="Copy query link to clipboard" cr-tooltip cr-tooltip-position="bottom">
+                <img src="static/assets/icon-share.svg"/>
               </div>
             </div>
           </div>
