@@ -11,6 +11,8 @@ Breaking Changes
 Changes
 -------
 
+ - Implemented share query feature in the Console.
+
 Fixes
 -----
 
